release/1.8.6/VERSION.md
# 1.8.6

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.8.6```   |
| Release Time   | ```2015-05-25T10:31:19+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.8```   |
| sha1   | ```f6ad102bcaa53b1a58358f16e376d548d44933ec```   |
| size   | ```78494```   |
| total size  | ```114885064```  |
| url       | ```https://launchermeta.mojang.com/v1/packages/f6ad102bcaa53b1a58358f16e376d548d44933ec/1.8.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```faa55e34ded35089d34fe921ea83d317fc152e93```   |
| size   | ```8461536```   |
| url       | ```https://launcher.mojang.com/v1/objects/faa55e34ded35089d34fe921ea83d317fc152e93/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```2bd44b53198f143fb278f8bec3a505dad0beacd2```   |
| size   | ```9780573```   |
| url       | ```https://launcher.mojang.com/v1/objects/2bd44b53198f143fb278f8bec3a505dad0beacd2/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |