release/1.8.7/VERSION.md
# 1.8.7

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.8.7```   |
| Release Time   | ```2015-06-05T10:10:44+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.8```   |
| sha1   | ```f6ad102bcaa53b1a58358f16e376d548d44933ec```   |
| size   | ```78494```   |
| total size  | ```114885064```  |
| url       | ```https://launchermeta.mojang.com/v1/packages/f6ad102bcaa53b1a58358f16e376d548d44933ec/1.8.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```d546a6a092060c85f1eb1d9213ff823c558b1255```   |
| size   | ```8461925```   |
| url       | ```https://launcher.mojang.com/v1/objects/d546a6a092060c85f1eb1d9213ff823c558b1255/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```35c59e16d1f3b751cd20b76b9b8a19045de363a9```   |
| size   | ```9780646```   |
| url       | ```https://launcher.mojang.com/v1/objects/35c59e16d1f3b751cd20b76b9b8a19045de363a9/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |